# CCQA

./: CONTRIBUTING.md  README.md
python/: closed_book_processing.py  json_duplicate_filter.py  mhtml_to_json.py  passage_retrieval_processing.py
rust/: Cargo.toml
rust/src/: main.rs
