[workspace]

[package]
name = "ccqa_rust"
version = "0.1.0"
edition = "2018"

[dependencies]
clap="2.33"
html-escape="0.2.5"
indicatif = { version = "0.15", features = ["rayon"] }
kuchiki="0.8.1"
rayon="1.5"
regex="1.4.2"
scraper="0.12.0"
serde = { version = "1.0.126", features = ["derive", "rc"] }
serde_json = { version = "1.0", features = ["float_roundtrip", "unbounded_depth"] }
warc= {git = "https://github.com/jedireza/warc", rev = "dacedbc3760bb2b581c59954c29a0c7932468005"}
lazy_static = "1.4.0"
